Fixed counting problem, expanded to 4x4

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       <div></div>
       <div></div>
       <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </section>
 
     <section class="controls">
