Add user-specified game map size, broke mine counting function

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>MindSweeper</title>
 </head>
   <body>
-    <section class="game-area">
+    <section id="game-area">
       <div></div>
       <div></div>
       <div></div>
       <div></div>
-      <div></div>
+      <div></div> 
       <div></div>
       <div></div>
       <div></div>
