Implement media query for tablets, add more styles

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         length:</label
       >
       <input id="side-length" type="text" />
-      <button id="start">start</button>
+      <button id="start">start!</button>
     </div>
     <div id="game-area"></div>
     <footer>
