--- a/index.html
+++ b/index.html
@@ -49,13 +49,24 @@
         </div>
       </div>
     </div>
-    <div class="controls">
-      <label for="side-length"
-        >Enter side <br />
-        length:</label
-      >
-      <input id="side-length" type="text" />
-      <button id="start">start!</button>
+
+    <div class="misc-container">
+      <div class="controls">
+        <label for="side-length"
+          >Enter side <br />
+          length:</label>
+        <input id="side-length" type="text" />
+        <button id="start">start!</button>
+      </div>
+      <div class="scores">
+        <h2>High Scores</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis aut
+          corrupti aliquam sed esse atque explicabo voluptates perferendis
+          doloremque nihil, quae consequuntur accusamus, illo quidem ipsa hic
+          vitae sit cupiditate.
+        </p>
+      </div>
     </div>
     <div id="game-area"></div>
     <footer>
