--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="banner">
       <h1>MindSweeper</h1>
-      <button id="main-menu-button">?</button>
+      <button id="help-button">?</button>
     </div>
-    <div class="content-area">
-      <div class="content-item">
+    <div class="help-area">
+      <div class="help-item">
         <h2>how to play</h2>
         <div>
           <p>
@@ -24,7 +24,7 @@
           </p>
         </div>
       </div>
-      <div class="content-item">
+      <div class="help-item">
         <h2>about</h2>
         <div>
           <p>
@@ -34,7 +34,7 @@
           </p>
         </div>
       </div>
-      <div class="content-item">
+      <div class="help-item">
         <h2>contact</h2>
         <div>
           <p>
@@ -42,27 +42,27 @@
             want to work together!
           </p>
           <ul>
-            <li><a href="">email</a></li>
-            <li><a href="">github</a></li>
-            <li><a href="">linkedin</a></li>
+            <li><a href="mailto:noreply@example.com">email</a></li>
+            <li><a href="https://github.com/drew-sarette">github</a></li>
+            <li><a href="dummy.html">linkedin</a></li>
           </ul>
         </div>
       </div>
     </div>
-
-    <div class="misc-container">
-      <div class="controls">
-        <label for="side-length"
-          >Enter side <br />
-          length:</label>
-        <input id="side-length" type="text" />
-        <button id="start">start!</button>
-      </div>
-      <div class="scores">
+    <div class="controls">
+      <label for="side-length"
+        >Enter side <br />
+        length:</label
+      >
+      <input id="side-length" type="text" />
+      <button id="start">start!</button>
+    </div>
+    <div class="scroll-container">
+      <div class="scroll-text">
         <h2>High Scores</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis aut
-          corrupti aliquam sed esse atque explicabo voluptates perferendis
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
+          aut corrupti aliquam sed esse atque explicabo voluptates perferendis
           doloremque nihil, quae consequuntur accusamus, illo quidem ipsa hic
           vitae sit cupiditate.
         </p>
