--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div>
           <p>
             Enter a number N between 0 and 200, and hit start to generate a N x
-            N Minesweeper grid! Each square has a 1/4 chance of being a mine. If
+            N Minesweeper grid! Each square has a 1/5 chance of being a mine. If
             you click on a safe square, the number of adjacent mines will be
             displayed. If not, well, you know...
           </p>
@@ -50,10 +50,7 @@
       </div>
     </div>
     <div class="controls">
-      <label for="side-length"
-        >Enter side <br />
-        length:</label
-      >
+      <label for="side-length">size:</label>
       <input id="side-length" type="text" />
       <button id="start">start!</button>
     </div>
