--- a/index.html
+++ b/index.html
@@ -13,39 +13,41 @@
       <button id="help-button">?</button>
     </div>
     <div class="help-area">
-      <div class="help-item">
-        <h2>how to play</h2>
-        <div>
-          <p>
-            Enter a number N between 0 and 200, and hit start to generate a N x
-            N Minesweeper grid! Each square has a 1/5 chance of being a mine. If
-            you click on a safe square, the number of adjacent mines will be
-            displayed. If not, well, you know... 
-          </p>
+      <div class="scroll-container-help">
+        <div class="help-item">
+          <h2>how to play</h2>
+          <div>
+            <p>
+              Enter a number N between 0 and 200, and hit start to generate a N x
+              N Minesweeper grid! Each square has a 1/5 chance of being a mine. If
+              you click on a safe square, the number of adjacent mines will be
+              displayed. If not, well, you know... 
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="help-item">
-        <h2>about</h2>
-        <div>
-          <p>
-            This was written to practice interacting with the DOM, generating
-            HTML and event listeners in JS, as well as responsive CSS. It is
-            also my final project for Web Dev 1 at Code Louisville!
-          </p>
+        <div class="help-item">
+          <h2>about</h2>
+          <div>
+            <p>
+              This was written to practice interacting with the DOM, generating
+              HTML and event listeners in JS, as well as responsive CSS. It is
+              also my final project for Web Dev 1 at Code Louisville!
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="help-item">
-        <h2>contact</h2>
-        <div>
-          <p>
-            Get in touch with me if you have any comments on my projects, or
-            want to work together!
-          </p>
-          <ul>
-            <li><a href="mailto:noreply@example.com">email</a></li>
-            <li><a href="https://github.com/drew-sarette">github</a></li>
-            <li><a href="dummy.html">linkedin</a></li>
-          </ul>
+        <div class="help-item">
+          <h2>contact</h2>
+          <div>
+            <p>
+              Get in touch with me if you have any comments on my projects, or
+              want to work together!
+            </p>
+            <ul>
+              <li><a href="mailto:noreply@example.com">email</a></li>
+              <li><a href="https://github.com/drew-sarette">github</a></li>
+              <li><a href="dummy.html">linkedin</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
