Implement 2d array, long click event for flagging squares, and hard mode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
+  <script src="game.js" defer></script>
+  <script src="index.js" defer></script>
   <title>MindSweeper</title>
 </head>
 
@@ -56,8 +58,8 @@
     </div>
   </div>
   <div class="controls">
-    <label for="side-length">size:</label>
-    <input id="side-length" type="text" />
+    <label for="size-input">size:</label>
+    <input id="size-input" type="text" />
     <button id="start">start!</button>
   </div>
   <div class="scroll-container">
@@ -75,8 +77,6 @@
   <footer>
     <p>Drew Sarette, 2022</p>
   </footer>
-  <script src="game.js"></script>
-  <script src="index.js"></script>
 </body>
 
 </html>
