Add memory mode, flagging feature, update some styles

--- a/index.html
+++ b/index.html
@@ -57,10 +57,16 @@
       </div>
     </div>
   </div>
-  <div class="controls">
-    <label for="size-input">size:</label>
-    <input id="size-input" type="text" />
-    <button id="start">start!</button>
+  <div class="controls-container">
+    <div class="input-container">
+      <label for="size-input">size:</label>
+      <input id="size-input" type="text" />
+      <button id="start">start!</button>
+    </div>
+    <div class="input-container">
+      <label for="memory-mode">memory mode:</label>
+      <input type="checkbox" id="memory-mode">
+    </div>
   </div>
   <div class="scroll-container">
     <div class="scroll-text">
@@ -78,5 +84,4 @@
     <p>Drew Sarette, 2022</p>
   </footer>
 </body>
-
 </html>
