Update icons and help info

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="Minesweeper memory game">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="/favicon_io/site.webmanifest">
   <link rel="stylesheet" href="style.css" />
   <script src="game.js" defer></script>
   <script src="index.js" defer></script>
-  <title>MindSweeper</title>
+  <title>Mindsweeper</title>
 </head>
 
 <body>
@@ -24,10 +27,7 @@
         <h2>how to play</h2>
         <div>
           <p>
-            Enter a number N between 0 and 200, and hit start to generate a N x
-            N Minesweeper grid! Each square has a 1/5 chance of being a mine. If
-            you click on a safe square, the number of adjacent mines will be
-            displayed. If not, well, you know...
+            Enter a number from 1 to 100 to start a new Mindsweeper game. Click/tap and hold to flag a square as a possible mine, and repeat to unflag and check the same square. To win, you must click on each square that does not contain a mine! In memory mode, the number of adjacent mines will only appear temporarily. Good luck!
           </p>
         </div>
       </div>
