Styles and bugs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="banner">
-    <h1>MindSweeper</h1>
+    <h1>mindsweeper</h1>
     <button id="help-button">?</button>
   </div>
   <div class="help-area">
@@ -41,19 +41,13 @@
         <h2>about</h2>
         <div>
           <p>
-            This was written to practice interacting with the DOM, generating
-            HTML and event listeners in JS, as well as responsive CSS. It is
-            also my final project for Web Dev 1 at Code Louisville!
+            This was written to practice manipulating the DOM, 2D arrays, objects, responsive CSS. It is my final project for Web Development 1 at Code Lousville!
           </p>
         </div>
       </div>
       <div class="help-item">
         <h2>contact</h2>
         <div>
-          <p>
-            Get in touch with me if you have any comments on my projects, or
-            want to work together!
-          </p>
           <ul>
             <li><a href="mailto:noreply@example.com">email</a></li>
             <li><a href="https://github.com/drew-sarette">github</a></li>
