--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="Minesweeper memory game">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-  <link rel="manifest" href="/favicon_io/site.webmanifest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.ico">
   <link rel="stylesheet" href="style.css" />
-  <script src="game.js" defer></script>
-  <script src="index.js" defer></script>
-  <title>Mindsweeper</title>
+  <script src="js/game.js" defer></script>
+  <script src="js/index.js" defer></script>
+  <title>mindsweeper</title>
 </head>
 
 <body>
@@ -41,7 +38,8 @@
         <h2>about</h2>
         <div>
           <p>
-            This was written to practice manipulating the DOM, 2D arrays, objects, responsive CSS. It is my final project for Web Development 1 at Code Lousville!
+            This was written to practice manipulating the DOM, 2D arrays, objects, responsive CSS. It is my final
+            project for Web Development 1 at Code Lousville!
           </p>
         </div>
       </div>
