Update help info display to use utility class, appear more consistently across devices

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <h1>mindsweeper</h1>
     <button id="help-button">?</button>
   </div>
-  <div class="help-area">
+  <div class="help-area display-none">
     <div class="scroll-container-help">
       <div class="help-item">
+        <button id="close-help">x</button>
         <h2>how to play</h2>
         <div>
           <p>
