Fix help screen display positioning on large screens

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
   <div class="banner">
     <h1>mindsweeper</h1>
-    <button id="help-button">?</button>
+    <button id="help-button" class="help-button">?</button>
   </div>
   <div class="help-area display-none">
     <div class="scroll-container-help">
       <div class="help-item">
-        <button id="close-help">x</button>
+        <button id="close-help" class="close-help">x</button>
         <h2>how to play</h2>
         <div>
           <p>
@@ -78,7 +78,7 @@
       </p>
     </div>
   </div>
-  <div id="game-area" class="container"></div>
+  <div id="game-area" class="game-area container"></div>
   <footer>
     <p>Drew Sarette, 2022</p>
   </footer>
